Added error pages for the location filter Applied the new design for the All work filter

--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -64,7 +64,13 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-l">My work filter - (Beyond) Release 2</h2>
         <div class="xui-alert-link__number">2 </div>
         <div class="govuk-!-padding-bottom-6"></div>
-          <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter?usertype=judiciary&">Filter open</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter?usertype=judiciary&">Filter open</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-trigger?usertype=judiciary&">Filter open - Error - None selected</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-service?usertype=judiciary&">Filter open - Error - Services not selected</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-location?usertype=judiciary&">Filter open - Error - Location not selected</a></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-types-of-work?usertype=judiciary&">Filter open - Error - Types of work not selected</a></p>
+
+
         <div class="govuk-!-padding-bottom-9"></div>
         <!-- SECTION BREAK -->
 
@@ -339,6 +345,10 @@ GOV.UK Prototype Kit
     <div class="xui-alert-link__number">2 </div>
     <div class="govuk-!-padding-bottom-6"></div>
       <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter?usertype=staff&">Filter open</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-trigger?usertype=staff&">Filter open - Error - None selected</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-service?usertype=staff&">Filter open - Error - Services not selected</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-location?usertype=staff&">Filter open - Error - Location not selected</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-error-types-of-work?usertype=staff&">Filter open - Error - Types of work not selected</a></p>
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
 
