--- a/app/views/workallocation/pages/wa-show-work-filter-error-location.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-error-location.html
@@ -7,16 +7,15 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary" autofocus>
   <h2 class="govuk-error-summary__title" id="error-summary-title">
     There is a problem
   </h2>
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#passport-issued-error">
-          <a href="#passport-issued-error">
-            Select a service, type of work and enter a location
+          <a href="#location">
+            Enter a location
           </a>
       </li>
     </ul>
@@ -36,14 +35,11 @@ My work
     href: "/workallocation/pages/wa-mytasks.html"}) }}
 
     <div class="govuk-grid-row">
-      <div class="govuk-form-group govuk-form-group--error">
+
       <div class="govuk-grid-column-one-half"
         style="background-color: #f3f2f1; padding:20px 20px 0px 20px; margin-left: 15px;">
 
         <h2 class="govuk-heading-m">Services</h2>
-        <span id="contact-error" class="govuk-error-message">
-          <span class="govuk-visually-hidden">Error:</span> Select a service
-        </span>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
             <div class="govuk-checkboxes govuk-checkboxes--large">
@@ -54,7 +50,7 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc">
+                <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="organisation">
                   Immigration and Asylum
                 </label>
@@ -81,14 +77,15 @@ My work
           </div>
         </div>
         <hr>
-        <span id="contact-error" class="govuk-error-message">
-          <span class="govuk-visually-hidden">Error:</span> Search for a location by name
-        </span>
-        <div style="width:70%; padding:0 0 20px 0;display:inline-block;">
+        <div class="govuk-form-group govuk-form-group--error">
+          <span id="contact-error" class="govuk-error-message">
+            <span class="govuk-visually-hidden">Error:</span> Search for a location by name
+          </span>
+        <div style="width:70%; padding:0 0 20px 0;display:inline-block;" id="location">
           <label class="govuk-body" for="location-picker">
             Search for a location by name
           </label>
-          <select id="location-picker" name="locationPicker" autofocus>
+          <select id="location-picker" name="locationPicker">
             <option value=" " {% if data.locationPicker == ' ' %} selected {% endif %}> </option>
             <option value="Birmingham Civil and Family Justice Centre" {% if data.locationPicker == 'Birmingham Civil and Family Justice Centre' %} selected {% endif %}>Birmingham Civil and Family Justice Centre</option>
             <option value="Bradford Tribunal Hearing Centre" {% if data.locationPicker == 'Bradford Tribunal Hearing Centre' %} selected {% endif %}>Bradford Tribunal Hearing Centre</option>
@@ -107,11 +104,9 @@ My work
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
+          </div>
           <hr>
           <h2 class="govuk-heading-s">Types of work</h2>
-          <span id="contact-error" class="govuk-error-message">
-            <span class="govuk-visually-hidden">Error:</span> Select a type of work
-          </span>
         {% if  data.usertype == 'judiciary'   %}
         <div class="govuk-grid-row">
           <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
@@ -123,7 +118,7 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="access-request" name="typeofwork" type="checkbox" value="access-request">
+                <input class="govuk-checkboxes__input" id="access-request" name="typeofwork" type="checkbox" value="access-request" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="access-request">
                   Access request
                 </label>
@@ -235,7 +230,6 @@ My work
           href: "",
           classes: "govuk-!-margin-right-3"
         }) }}
-      </div>
       </div>
     </div>
 
