--- a/app/views/workallocation/pages/wa-show-work-filter-error-location.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-error-location.html
@@ -136,7 +136,7 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="hearing-work" name="typeofwork" type="checkbox" value="hearing-work">
+                <input class="govuk-checkboxes__input" id="hearing-work" name="typeofwork" type="checkbox" value="hearing-work" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="hearing-work">
                   Hearing work
                 </label>
@@ -179,7 +179,7 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="decision-making-work" name="typeofwork" type="checkbox" value="decision-making-work">
+                <input class="govuk-checkboxes__input" id="decision-making-work" name="typeofwork" type="checkbox" value="decision-making-work" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="decision-making-work">
                   Decision-making work
                 </label>
