--- a/app/views/workallocation/pages/wa-show-work-filter-error-service.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-error-service.html
@@ -177,7 +177,7 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="access-request" name="typeofwork" type="checkbox" value="access-request">
+                <input class="govuk-checkboxes__input" id="access-request" name="typeofwork" type="checkbox" value="access-request" checked>
                 <label class="govuk-label govuk-checkboxes__label" for="access-request">
                   Access request
                 </label>
