--- a/app/views/workallocation/pages/wa-show-work-filter-error-types-of-work.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-error-types-of-work.html
@@ -100,6 +100,16 @@ My work
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
+          <ul class="hmcts-filter-tags">
+            <li>
+              <a class="hmcts-filter__tag" href="">
+                <span class="govuk-visually-hidden">
+                  Remove this filter
+                </span>
+                Taylor House Tribunal Hearing Centre
+              </a>
+            </li>
+          </ul>
           <hr>
           <h2 class="govuk-heading-s">Types of work</h2>
         {% if  data.usertype == 'judiciary'   %}
